# Korean-Speech-Labeling

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: download_audio.yaml  export_to_parquet.yaml  label_transcripts.yaml  labeling.yaml  postprocess_labels.yaml  preprocess_audio.yaml  transcribe_audio.yaml
src/: download_audio.py  export_to_parquet.py  label_transcripts.py  labeling.py  postprocess_labels.py  preprocess_audio.py  transcribe_audio.py
